--- a/app/src/main/res/layout/activity_ord01.xml
+++ b/app/src/main/res/layout/activity_ord01.xml
@@ -24,8 +24,10 @@
         android:layout_marginTop="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/today" />
+        app:layout_constraintTop_toBottomOf="@+id/today"
+        app:layout_constraintVertical_bias="0.478" />
 
     <Button
         android:id="@+id/cancel"
