Add List01 and other stuff

--- a/app/src/main/res/layout/activity_list01.xml
+++ b/app/src/main/res/layout/activity_list01.xml
@@ -16,8 +16,9 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
-        android:layout_width="409dp"
-        android:layout_height="681dp"
+        android:id="@+id/list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
