--- a/app/src/main/res/layout/activity_ord01.xml
+++ b/app/src/main/res/layout/activity_ord01.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/today"
+        android:id="@+id/total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/today"
+        app:layout_constraintTop_toBottomOf="@+id/total"
         app:layout_constraintVertical_bias="0.478" />
 
     <Button
