--- a/app/src/main/res/layout/cell_order.xml
+++ b/app/src/main/res/layout/cell_order.xml
@@ -53,7 +53,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="@string/totalPrice"
+        android:text="@string/price"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/date"
         app:layout_constraintStart_toStartOf="parent"
